--- a/assets/scss/_rewiev.scss
+++ b/assets/scss/_rewiev.scss
@@ -1,11 +1,27 @@
 .rewiev {
   .hero {
     padding: 40px 0;
+    @media (max-width: 768px) {
+      padding: 132px 0;
+    }
     .container {
+      &::after,
+      &::before {
+        display: none;
+      }
       gap: 140px;
       @media (max-width: 1090px) {
         gap: 32px;
       }
+      @media (max-width: 768px) {
+        flex-direction: column;
+        gap: 50px;
+        min-height: fit-content;
+      }
+    }
+    img {
+      max-width: 100%;
+      object-fit: contain;
     }
     h2.hero_left {
       color: #fff;
@@ -13,17 +29,31 @@
       font-style: normal;
       font-weight: 600;
       line-height: normal;
-      width: fit-content;
+      width: 306px;
       flex: 0 0 auto;
       @media (max-width: 1090px) {
         br {
           display: none;
         }
       }
+      @media (max-width: 768px) {
+        color: #fff;
+        text-align: center;
+        font-size: 26px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+      }
     }
   }
   .seo_score_content {
     width: calc(100% - 253px);
+    @media (max-width: 1200px) {
+      width: 100%;
+    }
+    .seo_score_content_progress {
+      gap: 28px;
+    }
     .seo_score_block {
       margin-top: 32px;
       width: 100%;
@@ -32,12 +62,20 @@
       padding: 10px 20px;
       border-radius: 22px;
       background: linear-gradient(241deg, #2b72f4 -2.57%, #19428e 73.63%);
+      @media (max-width: 768px) {
+        flex-direction: column;
+        gap: 20px;
+        padding: 20px;
+      }
       .section_title {
         color: #fff;
         font-size: 24px;
         font-style: normal;
         font-weight: 600;
         line-height: normal;
+        @media (max-width: 768px) {
+        text-align:center; 
+        }
       }
     }
     .seo_score_block_title {
@@ -58,6 +96,9 @@
         font-weight: 700;
         line-height: normal;
         margin-bottom: 20px;
+        @media (max-width: 768px) {
+          font-size: 16px;
+        }
       }
       .no_content {
         color: #bebebe;
@@ -78,6 +119,15 @@
         font-weight: 700;
         line-height: normal;
         padding: 10px 21px 10px 20px;
+        @media (max-width: 768px) {
+          color: #222529;
+          text-align: center;
+          font-size: 20px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+          padding: 12px 7px;
+        }
       }
       &_footer {
         color: #222529;
@@ -85,6 +135,12 @@
         font-style: normal;
         font-weight: 600;
         line-height: normal;
+        @media (max-width: 768px) {
+          gap: 20px;
+          flex-direction: column;
+          padding: 12px;
+        }
+
         .button {
           background: transparent;
         }
@@ -92,6 +148,9 @@
       &_body {
         padding: 20px;
         color: #222529;
+        @media (max-width: 768px) {
+          padding: 32px 12px 12px;
+        }
         &_top {
           gap: 18px;
         }
@@ -124,6 +183,8 @@
             line-height: normal;
             a {
               color: inherit;
+              word-break: break-all;
+              width: 100%;
             }
           }
         }
@@ -140,11 +201,32 @@
   .seo_score_content_top {
     margin-top: 31px;
     gap: 82px;
+    @media (max-width: 1200px) {
+      gap: 40px;
+    }
+    @media (max-width: 768px) {
+      flex-direction: column;
+    }
   }
   .seo_score_component {
     gap: 80px;
     .top_content {
       width: 100%;
+      @media (max-width: 1200px) {
+        gap: 20px;
+      }
+      @media (max-width: 768px) {
+        flex-direction: column;
+        align-items: start;
+      }
+      .section_title {
+        @media (max-width: 1200px) {
+          font-size: 32px;
+        }
+        @media (max-width: 768px) {
+          font-size: 26px;
+        }
+      }
       span {
         color: #8e939a;
         font-size: 16px;
@@ -161,6 +243,9 @@
     font-style: normal;
     font-weight: 600;
     line-height: normal;
+    @media (max-width: 768px) {
+      font-size: 20px;
+    }
   }
   .progress_lists {
     gap: 30px;
@@ -199,6 +284,12 @@
     gap: 20px;
     margin-top: 32px;
     list-style: none;
+    @media (max-width: 1200px) {
+      gap: 14px;
+    }
+    @media (max-width: 768px) {
+      gap: 20px 12px;
+    }
     a {
       border-radius: 100px;
       border: 1px solid #8e939a;
@@ -214,6 +305,12 @@
       font-style: normal;
       font-weight: 600;
       line-height: normal;
+      @media (max-width: 1200px) {
+        padding: 12px 30px;
+      }
+      @media (max-width: 768px) {
+        padding: 12px 50px;
+      }
     }
   }
   .seo_score_content_left {
@@ -221,6 +318,9 @@
     border-radius: 23px;
     background: #fff;
     box-shadow: -4px 4px 29px 0px rgba(0, 0, 0, 0.08);
+    @media (max-width: 1200px) {
+      padding: 20px 25px 14px;
+    }
     .seo_circle {
       position: relative;
       width: 285px;
@@ -296,8 +396,13 @@
         max-width: 100%;
         margin-top: 30px;
         text-align: center;
+        border: 1px solid transparent;
+        &:hover {
+          border-color: #2b72f4;
+        }
         &.no_bg {
           margin-top: 20px;
+          border-color: #2b72f4;
         }
       }
     }
@@ -344,6 +449,31 @@
       text-underline-offset: auto;
     }
   }
+  .tags_table {
+    width: 100%;
+    @media (max-width: 768px) {
+      overflow-x: auto;
+      &::-webkit-scrollbar {
+        background: #bebebe;
+        height: 4px;
+        border-radius: 100px;
+      }
+      &::-webkit-scrollbar-thumb {
+        background: #2b72f4;
+        border-radius: 100px;
+      }
+      .tag_columns {
+        @media (max-width: 768px) {
+          min-width: 690px;
+        }
+      }
+    }
+    .tag_items {
+      width: 100%;
+      min-width: 580px;
+      flex: 0 0 auto;
+    }
+  }
   .tag_items {
     margin-top: 25px;
     &.child {
@@ -368,6 +498,9 @@
       height: 78px;
       flex: 1;
       border-right: 1px solid #eaeaea;
+      @media (max-width: 768px) {
+        border: 0;
+      }
       &:last-child {
         border-right: none;
       }
@@ -384,6 +517,10 @@
         font-weight: 600;
         line-height: normal;
         max-width: 113px;
+        @media (max-width: 768px) {
+          text-align: left;
+          padding: 4px;
+        }
       }
     }
   }
@@ -397,17 +534,22 @@
   }
   .tag_columns {
     margin-top: 20px;
+
     &.last {
       display: none;
       margin-top: 0;
       .tag_column {
         margin-top: 12px;
+        @media (max-width: 768px) {
+          flex-wrap: wrap;
+        }
       }
     }
     .tag_column {
       gap: 12px;
       padding-bottom: 12px;
       border-bottom: 1px solid #eaeaea;
+
       &.tag_column_header {
         border-bottom: 0;
         b {
@@ -461,6 +603,9 @@
     }
     .seo_score_item_body {
       gap: 60px;
+      @media (max-width: 768px) {
+        flex-direction: column;
+      }
       .seo_score_item_content {
         margin-top: 0 !important;
       }
@@ -473,9 +618,8 @@
   .seo_score_item:nth-child(15),
   .seo_score_item.Lang {
     .all_content {
-      height: 40px;
       &.open {
-        height: auto;
+        height: auto !important;
         overflow-y: visible;
         .seo_score_item_content_title {
           color: #222529;
@@ -484,11 +628,9 @@
     }
   }
   .all_content {
-    height: 40px;
     overflow: hidden;
-
     &.open {
-      height: auto;
+      height: auto !important;
       overflow-y: visible;
       .seo_score_item_content_title {
         color: #222529;
@@ -497,9 +639,8 @@
   }
   .seo_score_item {
     .all_content {
-      height: 59px;
       &.open {
-        height: auto;
+        height: auto !important;
         overflow-y: visible;
         .seo_score_item_content_title {
           color: #222529;
@@ -510,11 +651,23 @@
     .seo_circle_content {
       padding: 20px 22px 32px 0;
       gap: 32px;
+
+      @media (max-width: 768px) {
+        flex-direction: column-reverse;
+        justify-content: center;
+        align-items: center;
+      }
+      p {
+        @media (max-width: 768px) {
+          text-align: center;
+          max-width: 100%;
+          margin: 0 auto;
+        }
+      }
       .seo_score_item_body {
         padding: 0 0 0 20px;
       }
       .all_content {
-        height: 76px;
         &.open {
           height: auto;
           overflow-y: visible;
@@ -594,6 +747,9 @@
       box-shadow: -4px 4px 29px 0px rgba(0, 0, 0, 0.08);
       flex: 0 0 auto;
       padding-left: 20px;
+      @media (max-width: 768px) {
+        padding-left: 0;
+      }
       span:first-child {
         padding: 12px;
         color: #8e939a;
@@ -644,18 +800,18 @@
       padding-left: 12px;
     }
   }
-  .seo_score_item:nth-child(1) {
-    .content_max {
-      height: 59px;
-      &.open {
-        height: auto;
-        overflow-y: visible;
-        .seo_score_item_content_title {
-          color: #222529;
-        }
-      }
-    }
-  }
+  // .seo_score_item {
+  //   .content_max {
+  //     height: 59px !important;
+  //     &.open {
+  //       height: auto;
+  //       overflow-y: visible;
+  //       .seo_score_item_content_title {
+  //         color: #222529;
+  //       }
+  //     }
+  //   }
+  // }
   .seo_link_blue {
     color: #2b72f4 !important;
     font-size: 20px;
