--- a/assets/scss/_seo_score.scss
+++ b/assets/scss/_seo_score.scss
@@ -1,10 +1,18 @@
 .seo_score {
   padding: 80px 0;
+  @media (max-width: 768px) {
+    padding: 32px 0 50px;
+  }
   &_sidebar {
     color: #222529;
+    @media (max-width: 1024px) {
+      display: none;
+    }
     &_items {
       gap: 8px;
       list-style: none;
+      position: sticky;
+      top: 10px;
       a {
         height: 56px;
         gap: 12px;
@@ -18,7 +26,7 @@
         font-weight: 500;
         padding: 8px;
         transition: all 0.2s linear;
-        border-radius: 12px;
+        
         &.last {
           color: #2b72f4;
         }
@@ -26,6 +34,7 @@
           background: #723deb;
           color: #fff;
           border-bottom-color: transparent;
+          border-radius: 12px;
         }
         &:hover {
           border-radius: 12px;
