--- a/assets/scss/_seo_score.scss
+++ b/assets/scss/_seo_score.scss
@@ -26,23 +26,38 @@
         font-weight: 500;
         padding: 8px;
         transition: all 0.2s linear;
-        
+        path {
+          transition: all 0.2s linear;
+        }
         &.last {
           color: #2b72f4;
+          img{
+            width: 24px;
+          }
         }
         &.active {
           background: #723deb;
           color: #fff;
           border-bottom-color: transparent;
           border-radius: 12px;
+          path {
+            fill: #fff;
+          }
         }
         &:hover {
           border-radius: 12px;
           background: #723deb;
           color: #fff;
           border-bottom-color: transparent;
+          path {
+            fill: #fff;
+          }
         }
       }
     }
   }
+  .social_icon{
+    width: 38px;
+  }
+
 }
