--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3194,8 +3194,14 @@
   padding: 8px;
   transition: all 0.2s linear;
 }
+.seo_score_sidebar_items a path {
+  transition: all 0.2s linear;
+}
 .seo_score_sidebar_items a.last {
   color: #2b72f4;
+}
+.seo_score_sidebar_items a.last img {
+  width: 24px;
 }
 .seo_score_sidebar_items a.active {
   background: #723deb;
@@ -3203,11 +3209,20 @@
   border-bottom-color: transparent;
   border-radius: 12px;
 }
+.seo_score_sidebar_items a.active path {
+  fill: #fff;
+}
 .seo_score_sidebar_items a:hover {
   border-radius: 12px;
   background: #723deb;
   color: #fff;
   border-bottom-color: transparent;
+}
+.seo_score_sidebar_items a:hover path {
+  fill: #fff;
+}
+.seo_score .social_icon {
+  width: 38px;
 }
 
 *,
