--- a/assets/scss/_seo_score.scss
+++ b/assets/scss/_seo_score.scss
@@ -30,9 +30,16 @@
           transition: all 0.2s linear;
         }
         &.last {
-          color: #2b72f4;
-          img{
-            width: 24px;
+          color: #2b72f4 ;
+          // &:hover {
+          //   border-color: #2b72f4;
+          //   border-radius: 0;
+          // }
+
+          img {
+            flex: 0 0 auto;
+            width: 24px !important;
+            height: 24px;
           }
         }
         &.active {
@@ -56,8 +63,7 @@
       }
     }
   }
-  .social_icon{
+  .social_icon {
     width: 38px;
   }
-
 }
