--- a/assets/scss/_rewiev.scss
+++ b/assets/scss/_rewiev.scss
@@ -399,10 +399,23 @@
         border: 1px solid transparent;
         &:hover {
           border-color: #2b72f4;
+          color: #2b72f4;
+        }
+        &:focus {
+          border-color: #2b72f4;
+          color: #fff;
         }
         &.no_bg {
           margin-top: 20px;
           border-color: #2b72f4;
+          &:focus {
+            background-color: #2b72f4;
+            color: #fff;
+          }
+          &:hover {
+            background-color: #2b72f4;
+            color: #fff;
+          }
         }
       }
     }
