--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -49,6 +49,9 @@ body {
 }
 .wrapper {
   overflow: hidden;
+  @media (max-width: 1024px) {
+    overflow: hidden !important;
+  }
 }
 .container {
   width: 100%;
